src/test/deca/syntax/invalid/simple_lex.deca
// Description:
//    Programme lexicalement correct mais pas syntaxiquement
//
// Resultats:
//no viable alternative at input 'idf'
//Succès pour test_lex

idf _autre_idf
{
}
(
)
// un commentaire.
